[package]
name = "audio"
version = "0.1.0"
edition = "2024"
description = "Cross-platform system audio control via OS-native APIs (Windows Core Audio / WASAPI)"
license = "MIT"
repository = "https://github.com/QsKue/audio"
readme = "README.md"
keywords = ["audio", "volume", "wasapi", "coreaudio"]
categories = ["multimedia::audio", "os::windows-apis"]
# Keep the AI-maintained docs and operating manual out of the published crate.
exclude = ["docs/", "AGENTS.md"]

[dependencies]
# The event channel for live notifications (volume/mute/default/hotplug), mirroring the `wifi` crate.
tokio = { version = "1", features = ["sync"] }

# Windows backend — Core Audio (MMDevice + WASAPI endpoint volume) via the official `windows` crate.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",       # PROPVARIANT
  "Win32_Media_Audio",                         # IMMDeviceEnumerator, eRender/eConsole, device states
  "Win32_Media_Audio_Endpoints",               # IAudioEndpointVolume
  "Win32_Devices_FunctionDiscovery",           # PKEY_Device_FriendlyName
  "Win32_UI_Shell_PropertiesSystem",           # IPropertyStore, PropVariantToStringAlloc
] }
